[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/Passdoor.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/Walk Pass/levels/14.png" type="Texture" id=2]
[ext_resource path="res://scenes/TileMap.tres" type="TileSet" id=3]
[ext_resource path="res://scenes/Enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/Pixel.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scenes/Passkey14.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Player14.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/Wall Priz14.tscn" type="PackedScene" id=8]
[ext_resource path="res://scripts/Level14.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 5 )

[node name="Level14" type="Node2D"]
script = ExtResource( 9 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -327698, 19, 0, -327697, 19, 0, -327696, 19, 0, -327695, 19, 0, -327694, 19, 0, -327693, 19, 0, -327692, 19, 0, -327691, 19, 0, -327690, 19, 0, -327689, 19, 0, -327688, 19, 0, -327687, 19, 0, -327686, 19, 0, -327685, 19, 0, -327684, 19, 0, -327683, 19, 0, -327682, 19, 0, -327681, 19, 0, -393216, 19, 0, -393215, 19, 0, -393214, 19, 0, -393213, 19, 0, -393212, 19, 0, -393211, 20, 0, -393210, 19, 0, -393209, 19, 0, -393208, 19, 0, -393207, 19, 0, -393206, 19, 0, -393205, 19, 0, -393204, 19, 0, -393203, 19, 0, -262162, 19, 0, -262161, 19, 0, -262160, 19, 0, -262159, 19, 0, -262158, 19, 0, -262157, 19, 0, -262156, 19, 0, -262155, 19, 0, -262154, 19, 0, -262153, 19, 0, -262152, 19, 0, -262151, 19, 0, -262150, 19, 0, -262149, 19, 0, -262148, 19, 0, -262147, 19, 0, -262146, 19, 0, -262145, 19, 0, -327680, 19, 0, -327679, 19, 0, -327678, 19, 0, -327677, 19, 0, -327676, 19, 0, -327675, 20, 0, -327674, 19, 0, -327673, 19, 0, -327672, 19, 0, -327671, 19, 0, -327670, 19, 0, -327669, 19, 0, -327668, 19, 0, -327667, 19, 0, -196626, 19, 0, -196625, 19, 0, -196624, 20, 0, -196623, 20, 0, -196622, 20, 0, -196621, 20, 0, -196620, 20, 0, -196619, 20, 0, -196618, 20, 0, -196617, 20, 0, -196616, 20, 0, -196615, 19, 0, -196614, 20, 0, -196613, 20, 0, -196612, 20, 0, -196611, 20, 0, -196610, 20, 0, -196609, 20, 0, -262144, 20, 0, -262143, 20, 0, -262142, 20, 0, -262141, 20, 0, -262140, 19, 0, -262139, 20, 0, -262138, 20, 0, -262137, 20, 0, -262136, 20, 0, -262135, 20, 0, -262134, 20, 0, -262133, 20, 0, -262132, 19, 0, -262131, 19, 0, -131090, 19, 0, -131089, 19, 0, -131088, 19, 0, -131087, 19, 0, -131086, 19, 0, -131085, 20, 0, -131084, 19, 0, -131083, 20, 0, -131082, 19, 0, -131081, 19, 0, -131080, 19, 0, -131079, 19, 0, -131078, 20, 0, -131077, 19, 0, -131076, 19, 0, -131075, 19, 0, -131074, 19, 0, -131073, 20, 0, -196608, 19, 0, -196607, 19, 0, -196606, 19, 0, -196605, 19, 0, -196604, 19, 0, -196603, 19, 0, -196602, 19, 0, -196601, 19, 0, -196600, 20, 0, -196599, 19, 0, -196598, 19, 0, -196597, 20, 0, -196596, 19, 0, -196595, 19, 0, -65554, 19, 0, -65553, 19, 0, -65552, 20, 0, -65551, 20, 0, -65550, 20, 0, -65549, 20, 0, -65548, 19, 0, -65547, 20, 0, -65546, 20, 0, -65545, 20, 0, -65544, 20, 0, -65543, 19, 0, -65542, 20, 0, -65541, 20, 0, -65540, 20, 0, -65539, 20, 0, -65538, 19, 0, -65537, 20, 0, -131072, 20, 0, -131071, 20, 0, -131070, 20, 0, -131069, 20, 0, -131068, 19, 0, -131067, 20, 0, -131066, 20, 0, -131065, 20, 0, -131064, 20, 0, -131063, 20, 0, -131062, 20, 0, -131061, 20, 0, -131060, 19, 0, -131059, 19, 0, -18, 19, 0, -17, 19, 0, -16, 19, 0, -15, 19, 0, -14, 19, 0, -13, 20, 0, -12, 19, 0, -11, 20, 0, -10, 19, 0, -9, 19, 0, -8, 19, 0, -7, 19, 0, -6, 20, 0, -5, 19, 0, -4, 19, 0, -3, 19, 0, -2, 19, 0, -1, 20, 0, -65536, 19, 0, -65535, 19, 0, -65534, 19, 0, -65533, 19, 0, -65532, 19, 0, -65531, 20, 0, -65530, 19, 0, -65529, 19, 0, -65528, 20, 0, -65527, 19, 0, -65526, 19, 0, -65525, 20, 0, -65524, 19, 0, -65523, 19, 0, 65518, 19, 0, 65519, 19, 0, 65520, 20, 0, 65521, 20, 0, 65522, 20, 0, 65523, 20, 0, 65524, 19, 0, 65525, 20, 0, 65526, 20, 0, 65527, 20, 0, 65528, 20, 0, 65529, 19, 0, 65530, 20, 0, 65531, 20, 0, 65532, 20, 0, 65533, 20, 0, 65534, 19, 0, 65535, 20, 0, 0, 20, 0, 1, 20, 0, 2, 20, 0, 3, 20, 0, 4, 19, 0, 5, 20, 0, 6, 20, 0, 7, 20, 0, 8, 20, 0, 9, 20, 0, 10, 20, 0, 11, 20, 0, 12, 19, 0, 13, 19, 0, 131054, 19, 0, 131055, 19, 0, 131056, 19, 0, 131057, 19, 0, 131058, 19, 0, 131059, 20, 0, 131060, 19, 0, 131061, 20, 0, 131062, 19, 0, 131063, 19, 0, 131064, 19, 0, 131065, 19, 0, 131066, 20, 0, 131067, 19, 0, 131068, 19, 0, 131069, 19, 0, 131070, 19, 0, 131071, 20, 0, 65536, 19, 0, 65537, 19, 0, 65538, 19, 0, 65539, 19, 0, 65540, 19, 0, 65541, 20, 0, 65542, 19, 0, 65543, 19, 0, 65544, 20, 0, 65545, 19, 0, 65546, 19, 0, 65547, 19, 0, 65548, 19, 0, 65549, 19, 0, 196590, 19, 0, 196591, 19, 0, 196592, 20, 0, 196593, 20, 0, 196594, 20, 0, 196595, 20, 0, 196596, 19, 0, 196597, 20, 0, 196598, 20, 0, 196599, 20, 0, 196600, 20, 0, 196601, 19, 0, 196602, 20, 0, 196603, 20, 0, 196604, 20, 0, 196605, 20, 0, 196606, 19, 0, 196607, 20, 0, 131072, 20, 0, 131073, 20, 0, 131074, 20, 0, 131075, 20, 0, 131076, 19, 0, 131077, 20, 0, 131078, 20, 0, 131079, 20, 0, 131080, 20, 0, 131081, 20, 0, 131082, 20, 0, 131083, 20, 0, 131084, 19, 0, 131085, 19, 0, 262126, 19, 0, 262127, 19, 0, 262128, 19, 0, 262129, 19, 0, 262130, 19, 0, 262131, 20, 0, 262132, 19, 0, 262133, 20, 0, 262134, 19, 0, 262135, 19, 0, 262136, 19, 0, 262137, 19, 0, 262138, 20, 0, 262139, 19, 0, 262140, 19, 0, 262141, 19, 0, 262142, 19, 0, 262143, 20, 0, 196608, 19, 0, 196609, 19, 0, 196610, 19, 0, 196611, 19, 0, 196612, 19, 0, 196613, 20, 0, 196614, 19, 0, 196615, 19, 0, 196616, 20, 0, 196617, 19, 0, 196618, 19, 0, 196619, 20, 0, 196620, 19, 0, 196621, 19, 0, 327662, 19, 0, 327663, 19, 0, 327664, 20, 0, 327665, 20, 0, 327666, 20, 0, 327667, 20, 0, 327668, 19, 0, 327669, 20, 0, 327670, 20, 0, 327671, 20, 0, 327672, 20, 0, 327673, 19, 0, 327674, 20, 0, 327675, 20, 0, 327676, 20, 0, 327677, 20, 0, 327678, 19, 0, 327679, 20, 0, 262144, 20, 0, 262145, 20, 0, 262146, 20, 0, 262147, 20, 0, 262148, 19, 0, 262149, 20, 0, 262150, 20, 0, 262151, 20, 0, 262152, 20, 0, 262153, 20, 0, 262154, 20, 0, 262155, 20, 0, 262156, 19, 0, 262157, 19, 0, 393198, 19, 0, 393199, 19, 0, 393200, 19, 0, 393201, 19, 0, 393202, 19, 0, 393203, 20, 0, 393204, 19, 0, 393205, 20, 0, 393206, 19, 0, 393207, 19, 0, 393208, 19, 0, 393209, 19, 0, 393210, 20, 0, 393211, 19, 0, 393212, 19, 0, 393213, 19, 0, 393214, 19, 0, 393215, 20, 0, 327680, 19, 0, 327681, 19, 0, 327682, 19, 0, 327683, 19, 0, 327684, 19, 0, 327685, 19, 0, 327686, 19, 0, 327687, 19, 0, 327688, 20, 0, 327689, 19, 0, 327690, 19, 0, 327691, 20, 0, 327692, 19, 0, 327693, 19, 0, 458734, 19, 0, 458735, 19, 0, 458736, 20, 0, 458737, 20, 0, 458738, 20, 0, 458739, 20, 0, 458740, 19, 0, 458741, 20, 0, 458742, 20, 0, 458743, 20, 0, 458744, 20, 0, 458745, 19, 0, 458746, 20, 0, 458747, 20, 0, 458748, 20, 0, 458749, 20, 0, 458750, 19, 0, 458751, 20, 0, 393216, 20, 0, 393217, 20, 0, 393218, 20, 0, 393219, 20, 0, 393220, 19, 0, 393221, 20, 0, 393222, 20, 0, 393223, 20, 0, 393224, 20, 0, 393225, 20, 0, 393226, 20, 0, 393227, 20, 0, 393228, 19, 0, 393229, 19, 0, 524270, 19, 0, 524271, 19, 0, 524272, 19, 0, 524273, 19, 0, 524274, 19, 0, 524275, 20, 0, 524276, 19, 0, 524277, 20, 0, 524278, 19, 0, 524279, 19, 0, 524280, 19, 0, 524281, 19, 0, 524282, 20, 0, 524283, 19, 0, 524284, 19, 0, 524285, 19, 0, 524286, 19, 0, 524287, 20, 0, 458752, 19, 0, 458753, 19, 0, 458754, 19, 0, 458755, 19, 0, 458756, 19, 0, 458757, 20, 0, 458758, 19, 0, 458759, 19, 0, 458760, 20, 0, 458761, 19, 0, 458762, 19, 0, 458763, 20, 0, 458764, 19, 0, 458765, 19, 0, 589806, 19, 0, 589807, 19, 0, 589808, 20, 0, 589809, 20, 0, 589810, 20, 0, 589811, 20, 0, 589812, 19, 0, 589813, 20, 0, 589814, 20, 0, 589815, 20, 0, 589816, 20, 0, 589817, 19, 0, 589818, 20, 0, 589819, 20, 0, 589820, 20, 0, 589821, 20, 0, 589822, 19, 0, 589823, 20, 0, 524288, 20, 0, 524289, 20, 0, 524290, 20, 0, 524291, 20, 0, 524292, 19, 0, 524293, 20, 0, 524294, 20, 0, 524295, 20, 0, 524296, 20, 0, 524297, 20, 0, 524298, 20, 0, 524299, 20, 0, 524300, 19, 0, 524301, 19, 0, 655342, 19, 0, 655343, 19, 0, 655344, 19, 0, 655345, 19, 0, 655346, 19, 0, 655347, 20, 0, 655348, 19, 0, 655349, 20, 0, 655350, 19, 0, 655351, 19, 0, 655352, 19, 0, 655353, 19, 0, 655354, 20, 0, 655355, 19, 0, 655356, 19, 0, 655357, 19, 0, 655358, 19, 0, 655359, 20, 0, 589824, 19, 0, 589825, 19, 0, 589826, 19, 0, 589827, 19, 0, 589828, 19, 0, 589829, 20, 0, 589830, 19, 0, 589831, 19, 0, 589832, 20, 0, 589833, 19, 0, 589834, 19, 0, 589835, 19, 0, 589836, 19, 0, 589837, 19, 0, 720878, 19, 0, 720879, 19, 0, 720880, 20, 0, 720881, 20, 0, 720882, 20, 0, 720883, 20, 0, 720884, 19, 0, 720885, 20, 0, 720886, 20, 0, 720887, 20, 0, 720888, 20, 0, 720889, 20, 0, 720890, 20, 0, 720891, 20, 0, 720892, 20, 0, 720893, 20, 0, 720894, 19, 0, 720895, 20, 0, 655360, 20, 0, 655361, 20, 0, 655362, 20, 0, 655363, 20, 0, 655364, 20, 0, 655365, 20, 0, 655366, 20, 0, 655367, 20, 0, 655368, 20, 0, 655369, 20, 0, 655370, 20, 0, 655371, 20, 0, 655372, 19, 0, 655373, 19, 0, 786414, 19, 0, 786415, 19, 0, 786416, 19, 0, 786417, 19, 0, 786418, 19, 0, 786419, 19, 0, 786420, 19, 0, 786421, 19, 0, 786422, 19, 0, 786423, 19, 0, 786424, 19, 0, 786425, 19, 0, 786426, 19, 0, 786427, 19, 0, 786428, 19, 0, 786429, 19, 0, 786430, 19, 0, 786431, 19, 0, 720896, 19, 0, 720897, 19, 0, 720898, 19, 0, 720899, 19, 0, 720900, 19, 0, 720901, 19, 0, 720902, 19, 0, 720903, 19, 0, 720904, 19, 0, 720905, 19, 0, 720906, 19, 0, 720907, 19, 0, 720908, 19, 0, 720909, 19, 0, 851950, 19, 0, 851951, 19, 0, 851952, 19, 0, 851953, 19, 0, 851954, 19, 0, 851955, 19, 0, 851956, 19, 0, 851957, 19, 0, 851958, 19, 0, 851959, 19, 0, 851960, 19, 0, 851961, 19, 0, 851962, 19, 0, 851963, 19, 0, 851964, 19, 0, 851965, 19, 0, 851966, 19, 0, 851967, 19, 0, 786432, 19, 0, 786433, 19, 0, 786434, 19, 0, 786435, 19, 0, 786436, 19, 0, 786437, 19, 0, 786438, 19, 0, 786439, 19, 0, 786440, 19, 0, 786441, 19, 0, 786442, 19, 0, 786443, 19, 0, 786444, 19, 0, 786445, 19, 0 )

[node name="14" type="Sprite" parent="TileMap"]
position = Vector2( -256, 192 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="TileMap"]
margin_left = -267.0
margin_top = 145.0
margin_right = -123.0
margin_bottom = 242.0
rect_rotation = -0.285097
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "lamees_lms_"
align = 1
valign = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -288, -96 )
anchor_mode = 0
current = true
zoom = Vector2( 0.4, 0.42 )

[node name="Passdoor" parent="." instance=ExtResource( 1 )]
position = Vector2( 64, 160 )

[node name="Passkey14" parent="." instance=ExtResource( 6 )]
position = Vector2( -192, -64 )

[node name="Wall Priz14" parent="." instance=ExtResource( 8 )]
position = Vector2( 80, -96 )

[node name="Player14" parent="." instance=ExtResource( 7 )]
position = Vector2( -256, 160 )

[node name="Enemy1" parent="." instance=ExtResource( 4 )]
position = Vector2( -256, 128 )

[node name="Enemy2" parent="." instance=ExtResource( 4 )]
position = Vector2( -256, 96 )

[node name="Enemy3" parent="." instance=ExtResource( 4 )]
position = Vector2( -256, 64 )

[node name="Enemy4" parent="." instance=ExtResource( 4 )]
position = Vector2( -256, 32 )

[node name="Enemy5" parent="." instance=ExtResource( 4 )]
position = Vector2( -256, 0 )

[node name="Enemy6" parent="." instance=ExtResource( 4 )]
position = Vector2( -256, -32 )

[node name="Enemy7" parent="." instance=ExtResource( 4 )]
position = Vector2( -128, -32 )

[node name="Enemy8" parent="." instance=ExtResource( 4 )]
position = Vector2( -128, 0 )

[node name="Enemy9" parent="." instance=ExtResource( 4 )]
position = Vector2( -128, 32 )

[node name="Enemy10" parent="." instance=ExtResource( 4 )]
position = Vector2( -128, 64 )

[node name="Enemy11" parent="." instance=ExtResource( 4 )]
position = Vector2( -128, 96 )

[node name="Enemy12" parent="." instance=ExtResource( 4 )]
position = Vector2( -128, 128 )

[node name="Enemy13" parent="." instance=ExtResource( 4 )]
position = Vector2( -48, 128 )

[node name="Enemy14" parent="." instance=ExtResource( 4 )]
position = Vector2( -48, 96 )

[node name="Enemy15" parent="." instance=ExtResource( 4 )]
position = Vector2( -48, 64 )

[node name="Enemy16" parent="." instance=ExtResource( 4 )]
position = Vector2( -48, 32 )

[node name="Enemy17" parent="." instance=ExtResource( 4 )]
position = Vector2( -48, 0 )

[node name="Enemy18" parent="." instance=ExtResource( 4 )]
position = Vector2( -48, -32 )

[node name="Enemy19" parent="." instance=ExtResource( 4 )]
position = Vector2( 48, -32 )

[node name="Enemy20" parent="." instance=ExtResource( 4 )]
position = Vector2( 48, 0 )

[node name="Enemy21" parent="." instance=ExtResource( 4 )]
position = Vector2( 48, 32 )

[node name="Enemy22" parent="." instance=ExtResource( 4 )]
position = Vector2( 48, 64 )

[node name="Enemy23" parent="." instance=ExtResource( 4 )]
position = Vector2( 48, 96 )

[node name="Enemy24" parent="." instance=ExtResource( 4 )]
position = Vector2( 48, 128 )

[node name="Enemy25" parent="." instance=ExtResource( 4 )]
position = Vector2( 176, 160 )

[node name="Enemy26" parent="." instance=ExtResource( 4 )]
position = Vector2( 80, 96 )

[node name="Enemy27" parent="." instance=ExtResource( 4 )]
position = Vector2( 176, 128 )

[node name="Enemy28" parent="." instance=ExtResource( 4 )]
position = Vector2( 176, 32 )

[node name="Enemy29" parent="." instance=ExtResource( 4 )]
position = Vector2( 80, 64 )

[node name="Enemy30" parent="." instance=ExtResource( 4 )]
position = Vector2( 176, 0 )

[node name="Enemy31" parent="." instance=ExtResource( 4 )]
position = Vector2( 176, -64 )

[node name="Enemy32" parent="." instance=ExtResource( 4 )]
position = Vector2( 80, -32 )
